--- a/senseistyle.css
+++ b/senseistyle.css
@@ -1,4 +1,22 @@
-#menubuttons {
+#buttons li{
 	float: left;
+	border-radius: 25px;
 	list-style: none;
+	text-align: center;
+	background-color: #000000;
+	margin-right: 30px;
+	width: 150px;
+	line-height: 60px;
+}
+
+#buttons li a {
+	text-decoration: none;
+	color: #ffffff;
+	display: block;
+}
+
+#buttons li a:hover {
+	text-decoration: none;
+	color: #000000;
+	background-color: #33B5E5;
 }
