--- a/senseistyle.css
+++ b/senseistyle.css
@@ -3,12 +3,10 @@
 	font-size: 20px;
 	font-family: sans-serif;
 	border: none;
-	border-radius: 25px;
 	list-style: none;
 	list-style-position: inside;
 	text-align: center;
 	background-color: rgba(177, 14, 14, 0.295);
-	margin-right: 10px;
 	width: 200px;
 	line-height: 60px;
 	box-shadow: 5px 5px 5px rgba(0,0,0,.2);
@@ -22,7 +20,6 @@
 }
 
 #buttons li a:hover{
-	border-radius: 25px;
 	text-decoration: none;
 	background-color: rgb(177, 14, 14);
 	color: rgba(255, 255, 255, 0.705);
@@ -44,4 +41,21 @@ body {
 
 ul li {
 	text-align: center
+}
+
+#main-title {
+
+	font-family: sans-serif;
+	text-decoration-color: blueviolet;
+	
+}
+
+#main {
+	background-color:  rgba(177, 14, 14, 0.295);
+	box-shadow: 5px 5px 5px rgba(0,0,0,.2);
+	width: 1000px;
+	height: 400px;
+	display: inline-block;
+	
+	
 }
