--- a/senseistyle.css
+++ b/senseistyle.css
@@ -6,6 +6,7 @@
 	list-style: none;
 	list-style-position: inside;
 	text-align: center;
+	border-radius: 10px;
 	background-color: rgba(177, 14, 14, 0.295);
 	width: 200px;
 	line-height: 60px;
@@ -21,6 +22,7 @@
 
 #buttons li a:hover{
 	text-decoration: none;
+	border-radius: 10px;
 	background-color: rgb(177, 14, 14);
 	color: rgba(255, 255, 255, 0.705);
 	box-shadow: 5px 5px 5px rgba(0,0,0,.2);
@@ -29,9 +31,17 @@
 
 }
 
+#buttons li a:active {
+	color: green;
+}
+
+#buttons {
+	width: auto;
+}
+
 body {
 	text-align: center;
-	background-color: rgba(0, 0, 0, 0.651);
+	background-color: rgba(224, 69, 69, 0.945);
 	background-image: url(https://i.imgur.com/G1hdcNs.png);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -53,9 +63,10 @@ ul li {
 #main {
 	background-color:  rgba(177, 14, 14, 0.295);
 	box-shadow: 5px 5px 5px rgba(0,0,0,.2);
-	width: 1000px;
+	width: auto;
 	height: 400px;
 	display: inline-block;
+	text-align: center;
 	
 	
 }
