--- a/Three Strikes/three strikes style.css
+++ b/Three Strikes/three strikes style.css
@@ -1,14 +1,36 @@
 body {
-background-color: azure;
+    background-color: azure;
+    margin: 0px;
 }
 
-.instructions {
+#instructions-title {
+    margin: auto;
     font-family: 'Sniglet';
+    font-size: 50px;
     text-align: center;
 }
 
-#startbutton {
+.instructions-row {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-family: 'Sniglet';
+}
+
+.number {
+    font-family: 'Sniglet';
+    font-size: 34px;
+    padding-right: 20px;
+}
+
+.rules {
+    font-size: 25px;
+    padding-left: 10;
+}
+
+#start {
     margin: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
     width: 200px;
     height: 60px;
     font-family: 'Sniglet';
@@ -22,13 +44,16 @@ background-color: azure;
 
 }
 
-.gamesquare {
-    background-color: white;
-    width: 220px;
-    height: 170px; 
-    border: solid 2px;
+.daysquares {
+    display: inline-block;
+    margin: 2px;
+    width: 250px;
+    height: 100px; 
+    border: solid 1px;
     border-color: black;
-    vertical-align: center;       
+    vertical-align: center;
+    font-family: 'Sniglet';
+    font-size: 33px;       
 }
 
 .daypics {
@@ -36,3 +61,36 @@ background-color: azure;
     width: 75px;
 }
 
+.gamesquares {
+    text-align: center;
+}
+.square {
+    font-family: 'Sniglet';
+    color: white;
+    margin: 5px;
+    width: 250px;
+    height:100px;
+    background-color: black;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#mon {
+    background-color: none;
+}
+
+#tue {
+    background-color: none;
+}
+
+#wed {
+    background-color: none;
+}
+
+#thu {
+    background-color: none;
+}
+
+#fri {
+    background-color: none;
+}
